[TML-43] - Implement Teacher search for Student (#52)
* [TML-43] - Implement Teacher search

* [TML-43] - Map Teachers to short DTOs

* [TML-43] - Add searched Teachers page

* [TML-43] - Add Remove button for teachers list